infra/core/core-deployment.yaml
# django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-app
  template:
    metadata:
      labels:
        app: core-app
    spec:
      containers:
      - name: core-app
        image: pronittardis/core-app:v1 
        ports:
        - containerPort: 8000
