infra/core/core-service.yaml
# core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  selector:
    app: core-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
